<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="sr.unasat.views.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Use ScrollView to see all views!-->

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textSize="16sp" />
            <!--Change text size with textSize!-->

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text"
            android:inputType="textCapSentences|textAutoCorrect" />
            <!--Determine input type/behavior with inputType!-->

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:onClick="onButtonClicked" />

        <ToggleButton
            android:id="@+id/toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:onClick="onToggleButtonClicked" />

        <Switch
            android:id="@+id/switch_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:onClick="onSwitchClicked" />

        <CheckBox android:id="@+id/checkbox_milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milk"
            android:onClick="onCheckboxClicked" />

        <CheckBox android:id="@+id/checkbox_sugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar"
            android:onClick="onCheckboxClicked" />

        <RadioGroup android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton android:id="@+id/radio_cavemen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cavemen"
                android:onClick="onRadioButtonClicked" />

            <RadioButton android:id="@+id/radio_astronauts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/astronauts"
                android:onClick="onRadioButtonClicked" />

        </RadioGroup>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_values" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/starbuzz_logo"
            android:contentDescription="@string/starbuzz_logo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/starbuzz_logo_mini"
            android:text="@string/click_me"/>

    </LinearLayout>
</ScrollView>